--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title></title>
+  <title>On se sent codeur 1.0</title>
   </head>
   <body>
     <h1>hello, world</h1>
